Add software links

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <tr><th scope="row"><a href="https://www.gitkraken.com/download" target="_blank">Git Kraken</a></th></tr>
 
                     <tr id="h"><td><h5>--- <code>H</code> ---</h5></td></tr>
+                    <tr><th scope="row"><a href="https://www.cpuid.com/softwares/hwmonitor.html" target="_blank">HW Monitor</a></th></tr>
 
                     <tr id="i"><td><h5>--- <code>I</code> ---</h5></td></tr>
 
@@ -94,6 +95,7 @@
                     <tr><th scope="row"><a href="https://www.jetbrains.com/toolbox-app/" target="_blank">JetBrains Toolbox</a></th></tr>
 
                     <tr id="k"><td><h5>--- <code>K</code> ---</h5></td></tr>
+                    <tr><th scope="row"><a href="https://www.kaspersky.com/downloads/" target="_blank">Kaspersky Security</a></th></tr>
 
                     <tr id="l"><td><h5>--- <code>L</code> ---</h5></td></tr>
 
@@ -106,12 +108,14 @@
 
                     <tr id="n"><td><h5>--- <code>N</code> ---</h5></td></tr>
                     <tr><th scope="row"><a href="https://nodejs.org/en/" target="_blank">node.js</a></th></tr>
+                    <tr><th scope="row"><a href="https://nordvpn.com/download/" target="_blank">NordVPN</a></th></tr>
                     <tr><th scope="row"><a href="https://www.nvidia.com/Download/index.aspx?lang=en-us" target="_blank">NVIDIA Drivers</a></th></tr>
 
                     <tr id="o"><td><h5>--- <code>O</code> ---</h5></td></tr>
                     <tr><th scope="row"><a href="https://www.origin.com/can/en-us/store/download" target="_blank">Origin</a></th></tr>
 
                     <tr id="p"><td><h5>--- <code>P</code> ---</h5></td></tr>
+                    <tr><th scope="row"><a href="https://www.postman.com/downloads/" target="_blank">Postman</a></th></tr>
                     <tr><th scope="row"><a href="https://www.python.org/downloads/" target="_blank">Python</a></th></tr>
 
                     <tr id="q"><td><h5>--- <code>Q</code> ---</h5></td></tr>
@@ -133,6 +137,7 @@
                     <tr><th scope="row"><a href="https://code.visualstudio.com/download" target="_blank">Visual Studio Code</a></th></tr>
 
                     <tr id="w"><td><h5>--- <code>W</code> ---</h5></td></tr>
+                    <tr><th scope="row"><a href="https://www.webex.com/downloads.html" target="_blank">Webex Meetings</a></th></tr>
 
                     <tr id="x"><td><h5>--- <code>X</code> ---</h5></td></tr>
                     <tr><th scope="row"><a href="https://www.apachefriends.org/download.html" target="_blank">XAMPP</a></th></tr>
