Add software links

--- a/index.html
+++ b/index.html
@@ -78,12 +78,13 @@
                     <tr><th scope="row"><a href="https://www.mozilla.org/en-US/firefox/developer/" target="_blank">Firefox Developer Edition</a></th></tr>
 
                     <tr id="g"><td><h5>--- <code>G</code> ---</h5></td></tr>
-                    <tr><th scope="row"><a href="https://golang.org/dl/" target="_blank">Go Lang</a></th></tr>
-                    <tr><th scope="row"><a href="https://www.google.com/chrome/" target="_blank">Google Chrome</a></th></tr>
-                    <tr><th scope="row"><a href="https://www.google.com/drive/download/" target="_blank">Google Drive</a></th></tr>
                     <tr><th scope="row"><a href="https://git-scm.com/downloads" target="_blank">Git</a></th></tr>
                     <tr><th scope="row"><a href="https://desktop.github.com/" target="_blank">GitHub Desktop</a></th></tr>
                     <tr><th scope="row"><a href="https://www.gitkraken.com/download" target="_blank">Git Kraken</a></th></tr>
+                    <tr><th scope="row"><a href="https://golang.org/dl/" target="_blank">Go Lang</a></th></tr>
+                    <tr><th scope="row"><a href="https://www.google.com/chrome/" target="_blank">Google Chrome</a></th></tr>
+                    <tr><th scope="row"><a href="https://www.google.com/drive/download/" target="_blank">Google Drive</a></th></tr>
+                    <tr><th scope="row"><a href="https://gpg4win.org/get-gpg4win.html" target="_blank">GPG 4 Win</a></th></tr>
 
                     <tr id="h"><td><h5>--- <code>H</code> ---</h5></td></tr>
                     <tr><th scope="row"><a href="https://www.cpuid.com/softwares/hwmonitor.html" target="_blank">HW Monitor</a></th></tr>
@@ -130,6 +131,7 @@
                     <tr id="t"><td><h5>--- <code>T</code> ---</h5></td></tr>
 
                     <tr id="u"><td><h5>--- <code>U</code> ---</h5></td></tr>
+                    <tr><th scope="row"><a href="https://www.microsoft.com/en-us/p/ubuntu/9nblggh4msv6" target="_blank">Ubuntu (Microsoft Store)</a></th></tr>
 
                     <tr id="v"><td><h5>--- <code>V</code> ---</h5></td></tr>
                     <tr><th scope="row"><a href="https://www.visual-paradigm.com/download/" target="_blank">Visual Paradigm</a></th></tr>
@@ -138,6 +140,8 @@
 
                     <tr id="w"><td><h5>--- <code>W</code> ---</h5></td></tr>
                     <tr><th scope="row"><a href="https://www.webex.com/downloads.html" target="_blank">Webex Meetings</a></th></tr>
+                    <tr><th scope="row"><a href="https://www.microsoft.com/en-us/p/windows-terminal/9n0dx20hk701" target="_blank">Windows Terminal</a></th></tr>
+                    <tr><th scope="row"><a href="https://docs.microsoft.com/en-us/windows/wsl/install-win10#step-4---download-the-linux-kernel-update-package" target="_blank">WSL - Linux Kernal</a></th></tr>
 
                     <tr id="x"><td><h5>--- <code>X</code> ---</h5></td></tr>
                     <tr><th scope="row"><a href="https://www.apachefriends.org/download.html" target="_blank">XAMPP</a></th></tr>
