Add software links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <li class="nav-item"><a class="nav-link" href="#0">#</a></li>
                 </ul>
                 <div class="d-flex">
-                    <code>Last Updated: 2021 April 21</code>
+                    <code>Last Updated: 2021 September 13</code>
                 </div>
               </div>
             </div>
@@ -61,9 +61,13 @@
                     <tr><th scope="row"><a href="https://www.amd.com/en/support" target="_blank">AMD Drivers</a></th></tr>
                     <tr><th scope="row"><a href="https://www.anaconda.com/products/individual#Downloads" target="_blank">Anaconda Individual</a></th></tr>
                     <tr><th scope="row"><a href="https://dotnet.microsoft.com/download" target="_blank">ASP.NET Framework</a></th></tr>
+                    <tr><th scope="row"><a href="https://maven.apache.org/download.cgi" target="_blank">Apache Maven</a></th></tr>
 
                     <tr id="b"><td><h5>--- <code>B</code> ---</h5></td></tr>
+                    <tr><th scope="row"><a href="https://www.blizzard.com/en-gb/download/" target="_blank">Blizzard (battle.net)</a></th></tr>
+
                     <tr id="c"><td><h5>--- <code>C</code> ---</h5></td></tr>
+                    <tr><th scope="row"><a href="https://cmder.net/" target="_blank">Cmder</a></th></tr>
 
                     <tr id="d"><td><h5>--- <code>D</code> ---</h5></td></tr>
                     <tr><th scope="row"><a href="https://discord.com/download" target="_blank">Discord</a></th></tr>
@@ -71,6 +75,7 @@
                     <tr><th scope="row"><a href="https://www.dropbox.com/download" target="_blank">Dropbox</a></th></tr>
 
                     <tr id="e"><td><h5>--- <code>E</code> ---</h5></td></tr>
+                    <tr><th scope="row"><a href="https://www.elgato.com/en/downloads" target="_blank">Elgato</a></th></tr>
 
                     <tr id="f"><td><h5>--- <code>F</code> ---</h5></td></tr>
                     <tr><th scope="row"><a href="https://filezilla-project.org/download.php?show_all=1" target="_blank">Filezilla Free</a></th></tr>
@@ -99,6 +104,7 @@
                     <tr><th scope="row"><a href="https://www.kaspersky.com/downloads/" target="_blank">Kaspersky Security</a></th></tr>
 
                     <tr id="l"><td><h5>--- <code>L</code> ---</h5></td></tr>
+                    <tr><th scope="row"><a href="https://www.logitechg.com/en-ca/innovation/g-hub.html" target="_blank">Logitech G Hub</a></th></tr>
 
                     <tr id="m"><td><h5>--- <code>M</code> ---</h5></td></tr>
                     <tr><th scope="row"><a href="https://docs.microsoft.com/en-us/azure/cosmos-db/local-emulator" target="_blank">Microsoft Azure Cosmos DB Emulator</a></th></tr>
@@ -127,6 +133,7 @@
                     <tr><th scope="row"><a href="https://slack.com/intl/en-us/downloads" target="_blank">Slack</a></th></tr>
                     <tr><th scope="row"><a href="https://www.spotify.com/download/" target="_blank">Spotify</a></th></tr>
                     <tr><th scope="row"><a href="https://store.steampowered.com/about/" target="_blank">Steam</a></th></tr>
+                    <tr><th scope="row"><a href="https://streamlabs.com/" target="_blank">Streamlabs OBS</a></th></tr>
 
                     <tr id="t"><td><h5>--- <code>T</code> ---</h5></td></tr>
 
@@ -150,6 +157,7 @@
 
                     <tr id="z"><td><h5>--- <code>Z</code> ---</h5></td></tr>
                     <tr><th scope="row"><a href="https://zoom.us/support/download" target="_blank">Zoom</a></th></tr>
+
                     <tr id="0"><td><h5>--- <code>Number</code> or <code>Symbol</code> ---</h5></td></tr>
                 </tbody>
               </table>
@@ -157,7 +165,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <span class="text-muted">Stephen K. Davis - Software Download List</span>
+            <span class="text-muted"><a href="https://stephenkdavis.net" target="_blank">Stephen K. Davis</a> - Software Download List</span>
         </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
